aos disabled on mobile and fix build error

--- a/source/stylesheets/site.css.css
+++ b/source/stylesheets/site.css.css
@@ -10361,8 +10361,7 @@ ul {
 
 body {
   color: #1e1e1e;
-  font-weight: 500;, sans-serif;
-  font-weight: 100;
+  font-weight: 500;
   margin: 0;
   position: relative;
 }
